samples/_failures_safe/1760884701_a5e0d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_000a7058.c: In function ‘main’:
./samples/SAFE/__tmp_000a7058.c:133:13: error: expected declaration or statement at end of input
  133 |             case 3:
      |             ^~~~
./samples/SAFE/__tmp_000a7058.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_000a7058.c:133:13: error: expected declaration or statement at end of input
